[package]
name = "rs-bot-zalo"
version = "0.1.0"
edition = "2024"
description = "A simple and lightweight Rust library for building Zalo Bots."
license = "MIT"
repository = "https://github.com/ahwuoc/rs-bot-zalo.git"
keywords = ["zalo", "bot", "api", "wrapper"]
categories = ["web-programming::http-client"]

[dependencies]
axum = "0.8.8"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
