[package]
name = "rs-bot-zalo"
version = "0.1.0"
edition = "2024"
description = "A simple and lightweight Rust library for building Zalo Bots."
license = "MIT"
repository = "https://github.com/ahwuoc/rs-bot-zalo.git"
keywords = ["zalo", "bot", "api", "wrapper"]
categories = ["web-programming::http-client"]

[dependencies]
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
tracing-subscriber = "0.3"

